--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,31 +1,28 @@
 <mat-card>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
   <mat-card-content *ngIf="!isLoading">
-    <form (submit)="onSavePost(postForm)" #postForm="ngForm">
-      <mat-form-field appearance="outline">
+    <form [formGroup]="form" (submit)="onSavePost()">
+      <mat-form-field>
         <mat-label>Post Title</mat-label>
         <input
           matInput
           type="text"
-          name="title"
-          [ngModel]="post?.title"
-          required
-          minlength="3"
-          #title="ngModel"
+          formControlName="title"
         >
-        <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
+        <mat-error *ngIf="form.get('title').invalid">Please enter a post title</mat-error>
       </mat-form-field>
-      <mat-form-field appearance="outline">
+      <div>
+        <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+        <input type="file" #filePicker>
+      </div>
+      <mat-form-field>
         <mat-label>Post Body</mat-label>
         <textarea
           matInput
           rows="4"
-          name="content"
-          [ngModel]="post?.content"
-          required
-          #content="ngModel"
+          formControlName="content"
         ></textarea>
-        <mat-error *ngIf="content.invalid">Please enter a post content</mat-error>
+        <mat-error *ngIf="form.get('content').invalid">Please enter a post content</mat-error>
       </mat-form-field>
       <button
         mat-flat-button
