--- a/src/app/posts/post-create/post-create.component.css
+++ b/src/app/posts/post-create/post-create.component.css
@@ -11,3 +11,11 @@ input[type="file"] {
   visibility: hidden;
   margin-bottom: 2rem;
 }
+
+.image-preview {
+  height: 5rem;
+}
+
+.image-preview img {
+  height: 100%;
+}
