--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -9,7 +9,7 @@
         <img [src]="post.imagePath" [alt]="post.title">
       </div>
       <p>{{ post.content }}</p>
-      <mat-action-row>
+      <mat-action-row *ngIf="userIsAuthenticated">
         <button mat-stroked-button color="primary" [routerLink]="['/edit', post.id]">EDIT</button>
         <button mat-stroked-button color="warn" (click)="onDelete(post.id)">DELETE</button>
       </mat-action-row>
