--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,14 +16,14 @@
     <li *ngIf="!userIsAuthenticated">
       <a
         mat-button
-        routerLink="/login"
+        routerLink="/auth/login"
         routerLinkActive="mat-accent"
         >Login</a>
     </li>
     <li *ngIf="!userIsAuthenticated">
       <a
         mat-button
-        routerLink="/signup"
+        routerLink="/auth/signup"
         routerLinkActive="mat-accent"
         >Sign Up</a>
     </li>
